# librealsense

./: .travis.yml  CMakeLists.txt  COPYING  NOTICE  appveyor.yml  readme.md
CMake/: fw_download.cmake  global_config.cmake  lrs_options.cmake  realsense.def
common/: CMakeLists.txt  fw-update-helper.cpp  fw-update-helper.h  model-views.cpp  model-views.h  notifications.cpp  notifications.h  on-chip-calib.cpp  on-chip-calib.h  opengl3.cpp  opengl3.h  os.cpp  os.h  process-manager.cpp  process-manager.h  realsense-ui-advanced-mode.h  rendering.h  rs-config.cpp  rs-config.h  tiny-profiler.h  updates-model.cpp  ux-window.cpp  ux-window.h  viewer.cpp  viewer.h
common/fw/: CMakeLists.txt
common/gl/: camera-shader.cpp  camera-shader.h  fbo.cpp  fbo.h  loader.h  pc-shader.cpp  pc-shader.h  shader.cpp  shader.h  texture-2d-shader.cpp  texture-2d-shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h  yuy2rgb.cpp  yuy2rgb.h
common/gl/backup/: fbo.cpp  fbo.h  loader.h  shader.cpp  shader.h  texture-2d-shader.cpp  texture-2d-shader.h  vao.cpp  vao.h
common/res/: d415.h  d435.h  sr300.h
examples/: CMakeLists.txt  example.hpp
examples/align/: rs-align.cpp
examples/capture/: rs-capture.cpp
examples/post-processing/: rs-post-processing.cpp
examples/save-to-disk/: rs-save-to-disk.cpp
include/librealsense2/: rs.hpp  rs_advanced_mode.hpp
include/librealsense2-gl/: rs_processing_gl.h  rs_processing_gl.hpp
include/librealsense2/h/: rs_context.h  rs_internal.h  rs_option.h  rs_processing.h  rs_sensor.h  rs_types.h
include/librealsense2/hpp/: rs_context.hpp  rs_device.hpp  rs_frame.hpp  rs_internal.hpp  rs_pipeline.hpp  rs_processing.hpp  rs_record_playback.hpp  rs_sensor.hpp  rs_types.hpp
src/: algo.cpp  algo.h  api.h  archive.cpp  archive.h  backend.h  concurrency.h  context.cpp  context.h  device.h  device_hub.cpp  frame-archive.h  frame-validator.cpp  gvd.h  image.cpp  log.cpp  realsense.def  rs.cpp  sensor.cpp  software-device.cpp  software-device.h  source.h  sync.cpp  types.cpp  types.h
src/compression/: Lz4Compression.h
src/core/: streaming.h
src/ds5/: CMakeLists.txt  ds5-device.cpp  ds5-device.h  ds5-factory.cpp  ds5-fw-update-device.cpp  ds5-fw-update-device.h  ds5-motion.cpp  ds5-options.cpp  ds5-options.h  ds5-private.cpp  ds5-private.h
src/ds5/advanced_mode/: advanced_mode.cpp
src/ethernet/: ip_device.cpp
src/fw-update/: fw-update-device-interface.h  fw-update-device.cpp  fw-update-device.h  fw-update-factory.cpp
src/gl/: CMakeLists.txt  camera-shader.cpp  camera-shader.h  colorizer-gl.cpp  colorizer-gl.h  pc-shader.cpp  pc-shader.h  pointcloud-gl.cpp  pointcloud-gl.h  realsense-gl.def  rs-gl.cpp  synthetic-stream-gl.cpp  synthetic-stream-gl.h  upload.cpp  upload.h  yuy2rgb-gl.cpp  yuy2rgb-gl.h
src/ivcam/: CMakeLists.txt  sr300-fw-update-device.cpp  sr300-fw-update-device.h  sr300.cpp  sr300.h
src/l500/: l500-device.cpp  l500-gvd.h  l500-private.h
src/libuvc/: libuvc.cpp
src/linux/: backend-v4l2.cpp
src/media/playback/: playback_device.cpp  playback_device.h
src/media/record/: record_device.cpp  record_device.h
src/media/ros/: ros_reader.cpp
src/pipeline/: resolver.h
src/proc/: CMakeLists.txt  align.cpp  auto-exposure-processor.cpp  auto-exposure-processor.h  colorizer.cpp  colorizer.h  pointcloud-sse.cpp  pointcloud-sse.h  pointcloud.cpp  pointcloud.h  synthetic-stream.cpp  synthetic-stream.h  xdr.cpp  xdr.h  yuy2rgb.h
src/proc/sse/: sse-pointcloud.cpp
src/tm2/: tm-device.cpp
src/win/: win-helpers.cpp  win-uvc.cpp
tools/: CMakeLists.txt
tools/convert/: CMakeLists.txt  readme.md  rs-convert.cpp
tools/depth-quality/: CMakeLists.txt  depth-quality-model.cpp  depth-quality-model.h  rs-depth-quality.cpp  script.py  software-dev.cpp  software-dev.hpp
tools/embed/: readme.md  rs-embed.cpp
tools/enumerate-devices/: rs-enumerate-devices.cpp
tools/fw-update/: CMakeLists.txt  rs-fw-update.cpp
tools/realsense-viewer/: CMakeLists.txt  FilteredCaptureNode.cpp  FilteredCaptureNode.h  fw-update-helper.h  realsense-viewer.cpp  script.py  simd.cpp  simd.h  software-dev.cpp  software-dev.hpp
tools/realsense-viewer/res/: realsense-viewer.aps
tools/realsense-viewer/tests/: awgc_5992  run_tests.ps1  test_default_formats.js
tools/rs-server/: RsDevice.cpp  RsServer.cpp
wrappers/android/examples/irsa_example/: local.properties
wrappers/android/librealsense/: build.gradle
wrappers/android/librealsense/src/main/java/com/intel/realsense/librealsense/: Device.java  ProductClass.java
wrappers/android/tools/camera/: build.gradle
wrappers/android/tools/camera/src/main/java/com/intel/realsense/camera/: DetachedActivity.java  FirmwareUpdateActivity.java  PreviewActivity.java  SettingsActivity.java
wrappers/android/tools/camera/src/main/res/values/: strings.xml
wrappers/csharp/Intel.RealSense/: FrameSet.cs  Types.cs
wrappers/csharp/cs-tutorial-3-processing/: Window.xaml  Window.xaml.cs
wrappers/opencv/: CMakeLists.txt  cv-helpers.hpp
wrappers/opencv/grabcuts/: rs-grabcuts.cpp
wrappers/opencv/stitching/: CMakeLists.txt  rs-stitch.cpp
wrappers/python/: python.cpp
wrappers/tensorflow/: example1 - object detection.py
